<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Underboss</string>
    <string name="battle_diary_button">Battle Diary</string>
    <string name="collection_button">Collection</string>
    <string name="create_army_list_button">Create Army List</string>
    <string name="reference_button">Reference</string>
    <string name="statistics_button">Statistics</string>
    <string name="title_activity_create">Create</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="options_exit_title">Exit</string>
    <string name="enter_own_faction_textview">Your faction:</string>
    <string name="enter_enemy_faction_textview">Enemy faction:</string>
    <string name="enter_battle_date_textview">Date: </string>
    <string name="send_battle_report_button_text">Enter</string>
    <string name="calling_activity_message">The calling activity was</string>
    <string name="get_battle_report_text_view">Add battle report</string>
    <string name="get_battle_report_button_text">Go get it</string>
    <string name="battle_diary_feedback_text">You played against</string>
    <string name="title_activity_battle_diary">BattleDiaryActivity</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="army_name_text">Name:</string>
    <string name="army_name_edit_text_placeholder">Army</string>
    <string name="warcaster_number_text_view">Warcasters:</string>
    <string name="points_text_view">Points:</string>
    <string name="wip">This functionality will be supported in a future release</string>

</resources>
