<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity">

    <Button
        android:text="@string/create_army_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/create_army_list_button"
        android:onClick="onCreateArmyListButtonClick"/>

    <Button
        android:text="@string/collection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/collection_button"
        android:onClick="onCollectionButtonClick"/>

    <Button
        android:text="@string/reference_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/reference_button"
        android:onClick="onReferenceButtonClick"/>

    <Button
        android:text="@string/statistics_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/statistics_button"
        android:onClick="onStatisticsButtonClick"/>

    <Button
        android:text="@string/battle_diary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/battle_diary_button"
        android:onClick="onBattleDiaryButtonClick"/>

</LinearLayout>
