<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center|top"
    tools:context="jp.co.nekosoft.underboss.battle.BattleDiaryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_battle_report_text_view"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_battle_report_button_text"
        android:layout_margin="20dp"
        android:onClick="onGetBattleReportClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_diary_feedback_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/enemy_faction_message"/>

</LinearLayout>